--- a/2ndpraject3/package.json
+++ b/2ndpraject3/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "mern",
-    "version": "1.0.0",
+    "name": "2ndpraject3",
+    "version": "0.1.0",
     "description": "",
     "main": "server.js",
     "scripts": {
